// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NavBar should match snapshot (authenticated) 1`] = `
<MetaNavBar
  local={
    Object {
      "list": Array [
        Array [
          "all",
          "All Polls",
          true,
          "/list?filter=all",
        ],
        Array [
          "created",
          "My Polls",
          true,
          "/list?filter=created",
        ],
        Array [
          "voted",
          "Voted",
          true,
          "/list?filter=voted",
        ],
        Array [
          "hidden",
          "Hidden",
          true,
          "/list?filter=hidden",
        ],
        Array [
          "form",
          "New Poll",
          true,
          "/form",
          "u-flex-right",
        ],
      ],
    }
  }
/>
`;

exports[`NavBar should match snapshot (default) 1`] = `
<MetaNavBar
  local={
    Object {
      "list": Array [
        Array [
          "all",
          "All Polls",
          true,
          "/list?filter=all",
        ],
        Array [
          "created",
          "My Polls",
          false,
          "/list?filter=created",
        ],
        Array [
          "voted",
          "Voted",
          true,
          "/list?filter=voted",
        ],
        Array [
          "hidden",
          "Hidden",
          true,
          "/list?filter=hidden",
        ],
        Array [
          "form",
          "New Poll",
          false,
          "/form",
          "u-flex-right",
        ],
      ],
    }
  }
/>
`;
